updated content and look

--- a/enterprise-development.html
+++ b/enterprise-development.html
@@ -57,116 +57,108 @@
 
         <div class="flip-grid" aria-live="polite">
             <!-- Replace img src and href with real images and links -->
-            <div class="flip-card" tabindex="0">
+            <div class="flip-card" tabindex="0" data-href="https://thedigitalcircle.org">
                 <button class="info-btn" aria-label="More info about The Digital Circle">i</button>
-                <a href="https://thedigitalcircle.org" target="_blank" rel="noopener" aria-label="Open The Digital Circle website">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="flip-card-title">The Digital Circle</div>
                         </div>
                         <div class="flip-card-back">
                             <p>A digital cooperative offering services for online community building.</p>
+                            <p class="mt-2"><a class="read-more btn btn-sm btn-outline-dark" href="https://thedigitalcircle.org" target="_blank" rel="noopener" aria-label="Read more about The Digital Circle">Read more</a></p>
                         </div>
                     </div>
-                </a>
             </div>
 
-            <div class="flip-card" tabindex="0">
+            <div class="flip-card" tabindex="0" data-href="">
                 <button class="info-btn" aria-label="More info about Funding Circle Services">i</button>
-                <a href="#" target="_blank" rel="noopener" aria-label="Open Funding Circle Services website">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="flip-card-title">Funding Circle Services</div>
                         </div>
                         <div class="flip-card-back">
                             <p>Financial services and advice for social enterprises.</p>
+                            <p class="mt-2"><a class="read-more btn btn-sm btn-outline-dark" href="#" aria-label="Read more about Funding Circle Services">Read more</a></p>
                         </div>
                     </div>
-                </a>
             </div>
 
-            <div class="flip-card" tabindex="0">
+            <div class="flip-card" tabindex="0" data-href="">
                 <button class="info-btn" aria-label="More info about Comms Consultancy Team">i</button>
-                <a href="#" target="_blank" rel="noopener" aria-label="Open Comms Consultancy Team website">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="flip-card-title">Comms Consultancy Team</div>
                         </div>
                         <div class="flip-card-back">
                             <p>Strategic communications and public engagement.</p>
+                            <p class="mt-2"><a class="read-more btn btn-sm btn-outline-dark" href="#" aria-label="Read more about Comms Consultancy Team">Read more</a></p>
                         </div>
                     </div>
-                </a>
             </div>
 
-            <div class="flip-card" tabindex="0">
+            <div class="flip-card" tabindex="0" data-href="">
                 <button class="info-btn" aria-label="More info about The Self-Care Garden">i</button>
-                <a href="#" target="_blank" rel="noopener" aria-label="Open The Self-Care Garden website">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="flip-card-title">The Self-Care Garden</div>
                         </div>
                         <div class="flip-card-back">
                             <p>Wellbeing programs and community gardens.</p>
+                            <p class="mt-2"><a class="read-more btn btn-sm btn-outline-dark" href="#" aria-label="Read more about The Self-Care Garden">Read more</a></p>
                         </div>
                     </div>
-                </a>
             </div>
 
-            <div class="flip-card" tabindex="0">
+            <div class="flip-card" tabindex="0" data-href="">
                 <button class="info-btn" aria-label="More info about permacultureconvergence">i</button>
-                <a href="#" target="_blank" rel="noopener" aria-label="Open permacultureconvergence website">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="flip-card-title">permacultureconvergence</div>
                         </div>
                         <div class="flip-card-back">
                             <p>Events and networks for permaculture practitioners.</p>
+                            <p class="mt-2"><a class="read-more btn btn-sm btn-outline-dark" href="#" aria-label="Read more about permacultureconvergence">Read more</a></p>
                         </div>
                     </div>
-                </a>
             </div>
 
-            <div class="flip-card" tabindex="0">
+            <div class="flip-card" tabindex="0" data-href="">
                 <button class="info-btn" aria-label="More info about Lanjaron Living">i</button>
-                <a href="#" target="_blank" rel="noopener" aria-label="Open Lanjaron Living website">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="flip-card-title">Lanjaron Living</div>
                         </div>
                         <div class="flip-card-back">
                             <p>Regenerative living projects in Lanjaron.</p>
+                            <p class="mt-2"><a class="read-more btn btn-sm btn-outline-dark" href="#" aria-label="Read more about Lanjaron Living">Read more</a></p>
                         </div>
                     </div>
-                </a>
             </div>
 
-            <div class="flip-card" tabindex="0">
+            <div class="flip-card" tabindex="0" data-href="https://minimumviable.academy">
                 <button class="info-btn" aria-label="More info about Minimum Viable Academy">i</button>
-                <a href="https://minimumviable.academy" target="_blank" rel="noopener" aria-label="Open Minimum Viable Academy website">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="flip-card-title">Minimum Viable Academy</div>
                         </div>
                         <div class="flip-card-back">
                             <p>Practical skills and short courses for founders.</p>
+                            <p class="mt-2"><a class="read-more btn btn-sm btn-outline-dark" href="https://minimumviable.academy" target="_blank" rel="noopener" aria-label="Read more about Minimum Viable Academy">Read more</a></p>
                         </div>
                     </div>
-                </a>
             </div>
 
-            <div class="flip-card" tabindex="0">
+            <div class="flip-card" tabindex="0" data-href="https://fincaverderegen.com">
                 <button class="info-btn" aria-label="More info about Finca Verde Regen">i</button>
-                <a href="https://fincaverderegen.com" target="_blank" rel="noopener" aria-label="Open Finca Verde Regen website">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <div class="flip-card-title">Finca Verde Regen</div>
                         </div>
                         <div class="flip-card-back">
                             <p>Regenerative agriculture and community projects based in Finca Verde.</p>
+                            <p class="mt-2"><a class="read-more btn btn-sm btn-outline-dark" href="https://fincaverderegen.com" target="_blank" rel="noopener" aria-label="Read more about Finca Verde Regen">Read more</a></p>
                         </div>
                     </div>
-                </a>
             </div>
 
         </div>
@@ -177,11 +169,11 @@
     <br />
 
     <script>
-    // Simplified flip/click behaviour (color is now handled in CSS)
+    // Flip behaviour and navigation using data-href on the card (avoids nested anchors)
     document.addEventListener('DOMContentLoaded', function(){
       document.querySelectorAll('.flip-card').forEach(function(card){
         var btn = card.querySelector('.info-btn');
-        var link = card.querySelector('a');
+        var href = card.dataset ? (card.dataset.href || '') : '';
 
         if (btn) {
           btn.addEventListener('click', function(e){
@@ -192,21 +184,26 @@
 
         card.addEventListener('click', function(e){
           if (e.target.closest('.info-btn')) return;
+
           var isTouch = ('ontouchstart' in window) || window.matchMedia('(hover: none)').matches;
+
           if (isTouch) {
             if (!card.classList.contains('flipped')) { e.preventDefault(); card.classList.add('flipped'); return; }
+            // if already flipped, follow the data-href if present
+            if (href) { window.open(href, '_blank', 'noopener'); }
             return;
           }
+
+          // Desktop: follow link on click
+          if (href) { window.open(href, '_blank', 'noopener'); }
         });
 
+        // Keyboard: Enter/Space on focused card follows same behaviour
         card.addEventListener('keydown', function(e){
           if ((e.key === 'Enter' || e.key === ' ') && document.activeElement === card) {
             var isTouch = ('ontouchstart' in window) || window.matchMedia('(hover: none)').matches;
             if (isTouch && !card.classList.contains('flipped')) { e.preventDefault(); card.classList.add('flipped'); }
-            else {
-              var link = card.querySelector('a');
-              if (link && link.href && link.href.indexOf('#') !== 0) { link.target = '_blank'; window.open(link.href, '_blank', 'noopener'); }
-            }
+            else if (href) { window.open(href, '_blank', 'noopener'); }
           }
         });
       });
