--- a/contact.html
+++ b/contact.html
@@ -18,22 +18,25 @@
     <link href="css/playground.css" rel="stylesheet">
   </head>
 <body>
+<header id="site-header">
   <div id="header">
     <h2>Aimee's contact form</h2>
   </div>
-  <nav>
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Projects</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="index.html">Aimee's Ecology</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i></a>
-      </li>
-    </ul>
+  <nav class="site-nav navbar navbar-expand-xl navbar-light">
+    <div class="container">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#siteNavbar" aria-controls="siteNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="siteNavbar">
+        <ul class="navbar-nav nav nav-tabs">
+          <li class="nav-item"><a class="nav-link active" href="#">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Aimee's Ecology</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i></a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
+  </header>
     <br />
     <br />
     <div class="container" id="form-box">
@@ -78,4 +81,5 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/site-nav.js"></script>
 </body>
