--- a/index.html
+++ b/index.html
@@ -22,12 +22,14 @@
 <body>
   <div class="content">
     <div id="main-page" class="container">
-      <div id="header">
-        <h2>Aimee's Ecology</h2>
-        <p>
-          “The first law of ecology is that everything is related to everything else.” — Barry Commoner
-        </p>
-      </div>
+      <header id="site-header">
+        <div id="header">
+          <h2>Aimee's Ecology</h2>
+          <p>
+            “The first law of ecology is that everything is related to everything else.” — Barry Commoner
+          </p>
+        </div>
+      </header>
       </div>
       <div class="circle-layout" style="position: relative; width: 850px; height: 500px; margin: 30px auto 0;">
         <img src="img/aimee.jpeg" alt="Aimee Fenech" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 450px; height: 450px; border-radius: 50%; object-fit: cover;">
