--- a/board-membership.html
+++ b/board-membership.html
@@ -19,37 +19,30 @@
   </head>
 <body>
 
+<header id="site-header">
     <div id="header">
         <h2>Aimee's Board Membership</h2>
     </div>
-    <div>
-        <ul class="nav justify-content-center">
-    <li class="nav-item">
-        <a class="nav-link" href="/index.html">Home</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/board-membership.html">Board Membership</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/project-management.html">Project Management</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/enterprise-development.html">Enterprise Development</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/publications.html">Publications</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/webdevprojects.html">Web Development</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/cv.html">CV</a>
-    </li>
-    </ul>
-    </div>
+    <nav class="site-nav navbar navbar-expand-xl navbar-light">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#siteNavbar" aria-controls="siteNavbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="siteNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/board-membership.html">Board Membership</a></li>
+            <li class="nav-item"><a class="nav-link" href="/project-management.html">Project Management</a></li>
+            <li class="nav-item"><a class="nav-link active" aria-current="page" href="/enterprise-development.html">Enterprise Development</a></li>
+            <li class="nav-item"><a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a></li>
+            <li class="nav-item"><a class="nav-link" href="/publications.html">Publications</a></li>
+            <li class="nav-item"><a class="nav-link" href="/webdevprojects.html">Web Development</a></li>
+            <li class="nav-item"><a class="nav-link" href="/cv.html">CV</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+</header>
     <hr>
     <div class="container">
         <h3>Board Membership</h3>
@@ -93,5 +86,6 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/site-nav.js"></script>
 </body>
 </html>
