--- a/publications.html
+++ b/publications.html
@@ -22,40 +22,33 @@
 <body>
   <div class="content">
     <div id="main-page" class="container">
+      <header id="site-header">
       <div id="header">
         <h2>Aimee's Ecology</h2>
         <p>
           “The first law of ecology is that everything is related to everything else.” — Barry Commoner
         </p>
       </div>
-      <div>
-          <ul class="nav justify-content-center">
-      <li class="nav-item">
-        <a class="nav-link" href="/index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/board-membership.html">Board Membership</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/project-management.html">Project Management</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/enterprise-development.html">Enterprise Development</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/publications.html">Publications</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/webdevprojects.html">Web Development</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/cv.html">CV</a>
-      </li>
-    </ul>
-    </div>
+      <nav class="site-nav navbar navbar-expand-xl navbar-light">
+        <div class="container">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#siteNavbar" aria-controls="siteNavbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="siteNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="/board-membership.html">Board Membership</a></li>
+              <li class="nav-item"><a class="nav-link" href="/project-management.html">Project Management</a></li>
+              <li class="nav-item"><a class="nav-link" href="/enterprise-development.html">Enterprise Development</a></li>
+              <li class="nav-item"><a class="nav-link" href="https://aimeefenech.com/permaculture/">Permaculture</a></li>
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="/publications.html">Publications</a></li>
+              <li class="nav-item"><a class="nav-link" href="/webdevprojects.html">Web Development</a></li>
+              <li class="nav-item"><a class="nav-link" href="/cv.html">CV</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
           <hr>
 
     <div style="height: 200px; width: 50%; text-align:center; margin:auto;">
@@ -81,6 +74,7 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script type="text/javascript" src="js/site-nav.js"></script>
 </body>
 
 </html>
