--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
   <link href="css/playground.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="home">
   <div class="content">
     <div id="main-page" class="container">
       <header id="site-header">
         <div id="header">
           <h2>Aimee's Ecology</h2>
+          <br>
           <p>
             “The first law of ecology is that everything is related to everything else.” — Barry Commoner
           </p>
